--- a/app/src/main/res/layout/fragment_scroll.xml
+++ b/app/src/main/res/layout/fragment_scroll.xml
@@ -11,20 +11,11 @@
         android:id="@+id/scroll_fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#52606D"
+        android:background="#ffffff"
         app:layout_constraintEnd_toStartOf="@id/bottom_nav"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Scroll fragment"
-            android:textColor="@color/black"
-            android:textSize="30sp" />
-
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
