--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="168sp"
-    android:layout_height="287sp">
+    android:layout_height="287sp"
+    android:id="@+id/item_layout">
 
     <ImageView
         android:id="@+id/imageView"
